<resources>
    <string name="app_name">Spending Tracker Lite</string>
    <string name="barcode">Barcode</string>
    <string name="country">Country</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="insert_product">Insert Product</string>
    <string name="view_products">View Products</string>
    <string name="percentage">Percentage</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="title">Title</string>
    <string name="brand">Brand</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="search_product">Search product</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="home_page">Home Page</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="add_product">Add Product</string>
    <string name="home">Home</string>
    <string name="description">Description</string>
    <string name="export_import">Export/Import</string>
    <string name="sid">SID</string>
    <string name="product_barcode">Product barcode</string>
    <string name="store_code">Store Code</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="insert_transaction">Insert Transaction</string>
    <string name="price">Price</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="transactions_for_product">Transactions for Product</string>
    <string name="error_field_required">This field is required</string>
    <string name="stores">Stores</string>
    <string name="product_category_field_hint">Product Category (e.g., Milk, Drink)</string>
    <string name="product_variant_field_hint">Variant (e.g., 1, 2, default: 1)</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_barcode_hint">Barcode (e.g., 13 digits)</string>
    <string name="product_type_field_hint">Product Type (e.g., Food, Electronics)</string>
    <string name="product_brand_field_hint">Brand</string>
    <string name="product_title_field_hint">Title / Product Name</string>
    <string name="product_unit_field_hint">Unit (e.g., kg, pcs)</string>
    <string name="product_percentage_field_hint">Percentage (Optional, e.g., 5.5)</string>
    <string name="product_manufacturer_field_hint">Manufacturer (Optional)</string>
    <string name="product_country_field_hint">Country of Origin (Optional)</string>
    <string name="no_products_found">No products found.\n</string>
    <string name="search_product_hint">Search</string>
    <string name="this_is_an_actual_purchase">This is an actual purchase</string>
    <string name="update_product">Update Product</string>
    <string name="add_new_store">Add New Store</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add_store">Add Store</string>
    <string name="store_code_scode">Store Code (SCODE)</string>
    <string name="store_name">Store Name</string>
</resources>